--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family:  'Franklin Gothic Medium', Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 body {
